# GameOfLife-MPI

./: CMakeLists.txt  GameOfLifeMpi.kdev4  main.c  main.cpp
include/: board.h  field.h  global_board.h  gol_board.h  log.h
relatorio/: main.tex  references.bib
relatorio/input/: 1_regras.tex  2.1_repesentacao.tex  2.2_algoritmo.tex  2.3_seperacao.tex  2.4_balanca.tex  2_repesentacao.tex
src/: board.c  field.c  global_board.c
